# BetVector

./: .env.example  .gitignore  CLAUDE.md  DATA_GAPS.md  Makefile  README.md  SYNC_STRATEGY.md  betvector.icns  betvector_buildplan.html  betvector_buildplan.md  betvector_howitworks.html  betvector_howitworks.md  betvector_howto.md  betvector_masterplan.html  betvector_masterplan.md  betvector_odds_and_model_improvement_report.md  betvector_prototype.html  betvector_twopager.html  demo_app.py  generate_html_docs.py  index.html  mockup_badges.html  pyproject.toml  requirements.txt  run_pipeline.py  worldcup_buildplan.md  worldcup_props_spike.md
.claude/: launch.json  settings.json
.streamlit/: config.toml  secrets.toml.example
_deploy/: betvector_cloud_migration_report.html  betvector_datasources_report.html  betvector_howto.html  betvector_multi_league_strategy.html  betvector_new_user_guide.html  betvector_odds_report.html  betvector_onepager.html  betvector_pitch.html  betvector_prototype.html  betvector_twopager.html  index.html
config/: email_config.yaml  leagues.yaml  settings.yaml  stadiums.yaml  wc_squads_2026.yaml  worldcup_2026.yaml  worldcup_venues.yaml
data/: betvector.db  e25_03_backtest_results.json
docs/: MODEL_EVALUATION.md  betvector_cloud_migration_report.md  betvector_data_onepager.html  betvector_data_report.md  betvector_datasources_report.md  betvector_howitworks.md  betvector_model_fix_test_report.html  betvector_model_fix_test_report.md  betvector_new_user_guide.md  betvector_onepager.md  pc25_multi_league_strategy.md
src/: __init__.py  (+3 more)
(+249 files in other folders)
